--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 youtube-subs.iml
 .idea/
 screens/
+chrome_promo_tiles/tile-920x680.jpg
+chrome_promo_tiles/tile-1400x560.jpg
+chrome_promo_tiles/tile-440x280.jpg
