--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-
   "description": "Make navigating YouTube's subscription grid easier by hiding watched videos",
+  "short_name": "Better Subscriptions for YouTube™",
   "manifest_version": 2,
-  "name": "Youtube-subs",
-  "version": "0.2",
+  "name": "Better Subscriptions for YouTube™",
+  "version": "0.2.1",
   "icons": {
     "48": "icons/ic_video_library_black_48dp_1x.png"
   },
