--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
   "content_scripts": [
     {
       "matches": ["*://*.youtube.com/feed/subscriptions"],
-      "js": ["subs.js"]
+      "js": ["subs.js"],
+      "css": ["subs.css"]
     }
   ]
 
