--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "icons": {
     "48": "icons/ic_video_library_black_48dp_1x.png"
   },
-  "permissions": ["*://*.youtube.com/*"],
+  "permissions": ["*://*.youtube.com/*", "storage"],
   "content_scripts": [
     {
       "matches": ["*://*.youtube.com/feed/subscriptions"],
