Videos marked as watched automatically
When a video is opened, it is added to the local storage marked as watched

Resolves #2

--- a/manifest.json
+++ b/manifest.json
@@ -11,8 +11,12 @@
   "content_scripts": [
     {
       "matches": ["*://*.youtube.com/feed/subscriptions"],
-      "js": ["subs.js"],
+      "js": ["common.js", "subs.js"],
       "css": ["subs.css"]
+    },
+    {
+      "matches": ["*://*.youtube.com/watch?v=*"],
+      "js": ["common.js", "vid.js"]
     }
   ]
 
