Mark watched Icon works both in Chrome and Firefox. Mark watched Icon changes opacity on mouseover and click

--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,13 @@
   "short_name": "Better Subscriptions for YouTube™",
   "manifest_version": 2,
   "name": "Better Subscriptions for YouTube™",
-  "version": "0.5",
+  "version": "0.5.1",
   "icons": {
     "48": "icons/ic_video_library_black_48dp_1x.png"
   },
+  "web_accessible_resources": [
+    "images/*"
+  ],
   "permissions": ["*://*.youtube.com/*", "storage"],
   "content_scripts": [
     {
