Refactored Subs grid UI related functions into own .js file for better code readability

--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.youtube.com/feed/subscriptions"],
-      "js": ["common.js", "subs.js"],
+      "js": ["common.js", "subs-ui.js", "subs.js"],
       "css": ["subs.css"]
     },
     {
