--- a/manifest.json
+++ b/manifest.json
@@ -18,24 +18,17 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*.youtube.com/feed/subscriptions"
+        "*://*.youtube.com/*"
       ],
       "js": [
         "common.js",
+        "pageHandler.js",
         "subs-ui.js",
-        "subs.js"
+        "subs.js",
+        "vid.js"
       ],
       "css": [
         "subs.css"
-      ]
-    },
-    {
-      "matches": [
-        "*://*.youtube.com/watch?v=*"
-      ],
-      "js": [
-        "common.js",
-        "vid.js"
       ]
     }
   ]
