--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
         "*://*.youtube.com/*"
       ],
       "js": [
+        "util.js",
         "common.js",
         "pageHandler.js",
         "subs-ui.js",
