Hide sections for Non-Polymer UI
Resolves #28

--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,7 @@
       "js": [
         "util.js",
         "common.js",
+        "queries.js",
         "subs-ui.js",
         "subs.js",
         "vid.js",
