--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,7 @@
       "js": [
         "util.js",
         "common.js",
+        "settingsLoader.js",
         "queries.js",
         "subs-ui.js",
         "subs.js",
