--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,12 @@ jobs:
       - name: Pack extension ZIP
         uses: TheDoctor0/zip-release@v0.3.0
         with:
-          filename: yt-better-subscriptions-${{ github.ref }}.zip
+          filename: yt-better-subscriptions-latest.zip
           exclusions: chrome_promo_tiles, .editorconfig, .gitignore
+          
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\/v/}
 
       - name: Create Release
         id: create_release
@@ -27,7 +31,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: Release ${{ steps.get_version.outputs.VERSION }}
           draft: false
           prerelease: false
 
@@ -38,6 +42,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./yt-better-subscriptions-${{ github.ref }}.zip
-          asset_name: yt-better-subscriptions-${{ github.ref }}.zip
+          asset_path: ./yt-better-subscriptions-latest.zip
+          asset_name: yt-better-subscriptions-${{ steps.get_version.outputs.VERSION }}.zip
           asset_content_type: application/zip
