Adding feature: Hide watched videos on Youtube homepage (#84)
Resolves #80
Resolves #73

--- a/manifest.json
+++ b/manifest.json
@@ -46,7 +46,9 @@
     }
   ],
   "background": {
-    "scripts": ["pages/background.js"]
+    "scripts": [
+      "pages/background.js"
+    ]
   },
   "options_ui": {
     "page": "pages/settings/settings.html",
