--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
+end_of_line = lf
 
 [*.{js,xml}]
 indent_style = space
