Sync watch history (#151)
Resolves #20
Resolves #22

--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,10 @@
   "manifest_version": 2,
   "name": "Better Subscriptions for YouTube™",
   "version": "0.18.0",
-  "applications": {
+  "browser_specific_settings": {
     "gecko": {
-      "id": "{5dc6dafa-584e-424a-bf90-1d1d8cfa3caa}"
+      "id": "{5dc6dafa-584e-424a-bf90-1d1d8cfa3caa}",
+      "strict_min_version": "55.0"
     }
   },
   "icons": {
