--- a/.github/workflows/publish-on-chrome-webstore.yml
+++ b/.github/workflows/publish-on-chrome-webstore.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           expression: |
             {
-              const 
+              const
                 attempt = parseInt(env.attemptNumber),
                 max = parseInt(env.maxAttempts);
               assert(attempt && max && max >= attempt);
@@ -43,8 +43,8 @@ jobs:
 
       - uses: robinraju/release-downloader@v1.8
         id: download
-        with: 
-          tag: ${{ github.event.inputs.tag }}
+        with:
+          tag: v${{ github.event.inputs.tag }}
           fileName: yt-better-subscriptions-*.zip
           tarBall: false
           zipBall: false
@@ -75,14 +75,14 @@ jobs:
       - name: Start the next attempt with the delay
         uses: benc-uk/workflow-dispatch@4c044c1613fabbe5250deadc65452d54c4ad4fc7 # pin@v1
         if: |
-          steps.getNextAttemptNumber.outputs.result && 
+          steps.getNextAttemptNumber.outputs.result &&
           steps.webStoreUpload.outputs.inReviewError == 'true'
         with:
           workflow: ${{ github.workflow }}
           token: ${{ secrets.WORKFLOWS_TOKEN }}
           wait-for-completion: false
           inputs: |
-            { 
+            {
               "attemptNumber": "${{ steps.getNextAttemptNumber.outputs.result }}",
               "maxAttempts": "${{ github.event.inputs.maxAttempts }}",
               "environment": "12hoursDelay"
