--- a/.github/workflows/publish-on-firefox-add-ons.yml
+++ b/.github/workflows/publish-on-firefox-add-ons.yml
@@ -14,8 +14,8 @@ jobs:
 
       - uses: robinraju/release-downloader@v1.8
         id: download
-        with: 
-          tag: ${{ github.event.inputs.tag }}
+        with:
+          tag: v${{ github.event.inputs.tag }}
           fileName: yt-better-subscriptions-*.zip
           tarBall: false
           zipBall: false
