--- a/.github/workflows/publish-on-chrome-webstore.yml
+++ b/.github/workflows/publish-on-chrome-webstore.yml
@@ -42,7 +42,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: robinraju/release-downloader@v1.8
-        id: download
         with:
           tag: v${{ github.event.inputs.tag }}
           fileName: yt-better-subscriptions-*.zip
@@ -50,6 +49,11 @@ jobs:
           zipBall: false
           extract: false
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get zip filename
+        id: download
+        run: |
+          zipFilePath = ${{ fromJson(steps.download.outputs.downloaded_files)[0] }}
+          echo "zipFileName=${zipFilePath##*/}" >> $GITHUB_OUTPUT
 
       - name: Fetch Google API access token
         id: fetchAccessToken
@@ -64,7 +68,7 @@ jobs:
         continue-on-error: true
         uses: cardinalby/webext-buildtools-chrome-webstore-upload-action@v1
         with:
-          zipFilePath: ${{ fromJson(steps.download.outputs.downloaded_files)[0] }}
+          zipFilePath: ${{ steps.download.outputs.zipFileName }}
           extensionId: ${{ secrets.G_EXTENSION_ID }}
           apiAccessToken: ${{ steps.fetchAccessToken.outputs.accessToken }}
           waitForUploadCheckCount: 10
@@ -80,7 +84,6 @@ jobs:
         with:
           workflow: ${{ github.workflow }}
           token: ${{ secrets.WORKFLOWS_TOKEN }}
-          wait-for-completion: false
           inputs: |
             {
               "attemptNumber": "${{ steps.getNextAttemptNumber.outputs.result }}",
