--- a/.github/workflows/publish-on-chrome-webstore.yml
+++ b/.github/workflows/publish-on-chrome-webstore.yml
@@ -43,7 +43,7 @@ jobs:
 
       - uses: robinraju/release-downloader@v1.8
         with:
-          tag: ${{ github.event.inputs.tag }}
+          tag: v${{ github.event.inputs.tag }}
           fileName: yt-better-subscriptions-*.zip
           tarBall: false
           zipBall: false
