Configured eslint based on .editorconfig

--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "Oscar Hernández",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@ag-media/eslint-config": "^1.1.19",
-    "@nkzw/eslint-config": "^1.5.0",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@types/chrome": "^0.0.251",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import-newlines": "^1.3.4",
+    "eslint-plugin-unicorn": "^49.0.0",
     "query-string": "^8.1.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.1.4",
