--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "rimraf": "^5.0.5",
     "rollup": "^4.1.4",
     "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-scss": "^4.0.0",
+    "sass": "^1.69.5",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "web-ext-types": "^3.2.1"
