--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "lib": [
             "ES2021",
             "DOM",
-            "DOM.Iterable"
+            "DOM.Iterable",
         ],
         "typeRoots": [
             "node_modules/@types",
