Added build scripts

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ chrome_promo_tiles/tile-1400x560.jpg
 chrome_promo_tiles/tile-440x280.jpg
 node_modules
 dist
+dist-firefox
+dist-chrome
+YT-Better-Subs-firefox.zip
+YT-Better-Subs-chrome.zip
