Added linting stylelint and linting github actions

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build:chrome": "npm run clean:chrome && npm run compile:chrome && npm run zip:chrome",
     "build": "npm run build:firefox && npm run build:chrome",
     "------": "",
-    "lint": "eslint ./",
+    "lint:eslint:reviewdog": "eslint -f rdjson --ext .js,.ts ./ || true",
+    "lint:eslint": "eslint --ext .js,.ts ./",
+    "lint:typescript": "tsc",
+    "lint:stylelint:reviewdog": "stylelint ./ -f json || true",
+    "lint:stylelint": "stylelint ./",
+    "lint": "npm run lint:eslint && npm run lint:typescript && npm run lint:stylelint",
     "----": "",
     "clean:firefox": "rimraf dist-firefox/* YT-Better-Subs-firefox.zip",
     "clean:chrome": "rimraf dist-chrome/* YT-Better-Subs-chrome.zip",
@@ -28,6 +33,7 @@
   "devDependencies": {
     "@ffflorian/jszip-cli": "^3.5.0",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@signal-noise/stylelint-scales": "^2.0.3",
     "@types/chrome": "^0.0.251",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
@@ -41,6 +47,15 @@
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-scss": "^4.0.0",
     "sass": "^1.69.5",
+    "stylelint": "^14.16.1",
+    "stylelint-color-format": "^1.1.0",
+    "stylelint-config-recommended-scss": "^8.0.0",
+    "stylelint-csstree-validator": "^3.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
+    "stylelint-high-performance-animation": "^1.9.0",
+    "stylelint-no-unresolved-module": "^2.2.1",
+    "stylelint-no-unsupported-browser-features": "^7.0.0",
+    "stylelint-order": "^6.0.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "web-ext-types": "^3.2.1"
