--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "moduleResolution": "node",
         "skipLibCheck": true,
         "strictNullChecks": false,
+        "noEmit": true
     },
     "include": [
         "*.ts",
