--- a/.github/workflows/pr-reviewdog.yml
+++ b/.github/workflows/pr-reviewdog.yml
@@ -7,7 +7,11 @@ jobs:
     name: eslint
     steps:
       - uses: actions/checkout@v3
-      - run: pnpm install
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: true
 
       - uses: reviewdog/action-setup@v1
       - run: "npm run --silent lint:eslint:reviewdog | jq '{source, diagnostics:[.diagnostics[] | {message, location, severity, original_output, code: {value:.code.value}}]}' | reviewdog -f=rdjson -reporter=github-pr-check -name='eslint'"
@@ -19,7 +23,11 @@ jobs:
     name: typescript
     steps:
       - uses: actions/checkout@v3
-      - run: pnpm install
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: true
 
       - uses: reviewdog/action-setup@v1
       - run: npm run --silent lint:typescript | reviewdog -f=tsc -reporter=github-pr-check -name="typescript"
@@ -31,7 +39,11 @@ jobs:
     name: stylelint
     steps:
       - uses: actions/checkout@v3
-      - run: pnpm install
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: true
 
       - uses: reviewdog/action-setup@v1
       - run: "npm run --silent lint:stylelint:reviewdog | jq -r '.[] | {source: .source, warnings:.warnings[]} | \"\\(.source):\\(.warnings.line):\\(.warnings.column):\\(.warnings.severity): \\(.warnings.text)\"' | reviewdog -efm='%f:%l:%c:%t%*[^:]: %m' -reporter=github-pr-check -name='stylelint'"
