--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.53.0",
+    "eslint-formatter-rdjson": "^1.0.6",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-import-newlines": "^1.3.4",
     "eslint-plugin-unicorn": "^49.0.0",
