--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@types/chrome": "^0.0.251",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-formatter-rdjson": "^1.0.6",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-import-newlines": "^1.3.4",
     "eslint-plugin-unicorn": "^49.0.0",
     "only-allow": "^1.2.1",
+    "postcss": "^8.4.31",
     "query-string": "^8.1.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.1.4",
@@ -56,7 +58,6 @@
     "stylelint-csstree-validator": "^3.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
     "stylelint-high-performance-animation": "^1.9.0",
-    "stylelint-no-unresolved-module": "^2.2.1",
     "stylelint-no-unsupported-browser-features": "^5.0.3",
     "stylelint-order": "^6.0.3",
     "tslib": "^2.6.2",
