--- a/manifest.json
+++ b/manifest.json
@@ -40,6 +40,7 @@
         "subs.js",
         "vid.js",
         "pageHandler.js"
+        "tweaks.js"
       ],
       "css": [
         "common.css",
