--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,10 @@
   "icons": {
     "48": "icons/ic_video_library_black_48dp_1x.png"
   },
+  "developer": {
+    "name": "Oscar Hernandez",
+    "url": "https://github.com/OsaSoft"
+  },
   "action": {
     "default_icon": {
       "48": "icons/ic_video_library_black_48dp_1x.png"
