--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,21 +53,23 @@ jobs:
           asset_name: yt-better-subscriptions-${{ steps.get_version.outputs.VERSION }}.zip
           asset_content_type: application/zip
 
-      - name: Publish on Chrome Webstore
-        uses: benc-uk/workflow-dispatch@4c044c1613fabbe5250deadc65452d54c4ad4fc7 # pin@v1
-        if: "!contains(github.event.head_commit.message, '[skip chrome]')"
-        with:
-          workflow: publish-on-chrome-web-store
-          token: ${{ secrets.WORKFLOWS_TOKEN }}
-          inputs: '{ "tag": "${{ steps.get_version.outputs.VERSION }}" }'
+        # Publish to stores - disabled as its not working atm
 
-      - name: Publish on Firefox Add-ons
-        uses: benc-uk/workflow-dispatch@4c044c1613fabbe5250deadc65452d54c4ad4fc7 # pin@v1
-        if: "!contains(github.event.head_commit.message, '[skip firefox]')"
-        with:
-          workflow: publish-on-firefox-add-ons
-          token: ${{ secrets.WORKFLOWS_TOKEN }}
-          inputs: '{ "tag": "${{ steps.get_version.outputs.VERSION }}" }'
+#      - name: Publish on Chrome Webstore
+#        uses: benc-uk/workflow-dispatch@4c044c1613fabbe5250deadc65452d54c4ad4fc7 # pin@v1
+#        if: "!contains(github.event.head_commit.message, '[skip chrome]')"
+#        with:
+#          workflow: publish-on-chrome-web-store
+#          token: ${{ secrets.WORKFLOWS_TOKEN }}
+#          inputs: '{ "tag": "${{ steps.get_version.outputs.VERSION }}" }'
+#
+#      - name: Publish on Firefox Add-ons
+#        uses: benc-uk/workflow-dispatch@4c044c1613fabbe5250deadc65452d54c4ad4fc7 # pin@v1
+#        if: "!contains(github.event.head_commit.message, '[skip firefox]')"
+#        with:
+#          workflow: publish-on-firefox-add-ons
+#          token: ${{ secrets.WORKFLOWS_TOKEN }}
+#          inputs: '{ "tag": "${{ steps.get_version.outputs.VERSION }}" }'
 
       # - name: Publish on Edge Add-ons
       #   uses: benc-uk/workflow-dispatch@4c044c1613fabbe5250deadc65452d54c4ad4fc7 # pin@v1
